k3s/monitoring/prometheus-stack/99-alertmanager.ingressroute copy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`alerts.vextech.dev`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
    middlewares:
      - name: no-auth
        namespace: monitoring
  tls: {}
